--- a/DogGo/Views/Walkers/Details.cshtml
+++ b/DogGo/Views/Walkers/Details.cshtml
@@ -12,74 +12,37 @@
   <section class="container">
     <img
       style="width:100px;float:left;margin-right:20px"
-      src="https://upload.wikimedia.org/wikipedia/commons/a/a0/Font_Awesome_5_regular_user-circle.svg"
+      src="@Model.Walker.ImageUrl"
     />
     <div>
-      <label class="font-weight-bold">Address:</label>
-      <span>@Model.Owner.Address</span>
+      <label class="font-weight-bold">Name: </label>
+      <span>@Model.Walker.Name</span>
     </div>
     <div>
-      <label class="font-weight-bold">Phone:</label>
-      <span>@Model.Owner.PhoneNumber</span>
-    </div>
-    <div>
-      <label class="font-weight-bold">Email:</label>
-      <span>@Model.Owner.Email</span>
+      <label class="font-weight-bold">Neighborhood: </label>
+      <span>@Model.Walker.Neighborhood.Name</span>
     </div>
   </section>
 
   <hr class="mt-5" />
   <div class="clearfix"></div>
 
-  <div class="row">
-    <section class="col-8 container mt-5">
-      <h1 class="text-left">Dogs</h1>
-
-      <div class="row">
-        @foreach (Dog dog in Model.Dogs) {
-        <div class="card m-4" style="width: 18rem;">
-          @if (String.IsNullOrEmpty(dog.ImageUrl)) {
-          <img
-            src="https://cdn.pixabay.com/photo/2018/08/15/13/12/dog-3608037_960_720.jpg"
-            class="card-img-top"
-            alt="Doggo"
-          />
-          } else {
-          <img src="@dog.ImageUrl" class="card-img-top" alt="Doggo" />
-          }
-          <div class="card-body">
-            <div>
-              <label class="font-weight-bold">Name:</label>
-              <span>@dog.Name</span>
-            </div>
-            <div>
-              <label class="font-weight-bold">Breed:</label>
-              <span>@dog.Breed</span>
-            </div>
-            <div>
-              <label class="font-weight-bold">Notes:</label>
-              <p>@dog.Notes</p>
-            </div>
-          </div>
-        </div>
-        }
-      </div>
-    </section>
-
     <section class="col-lg-4 col-md-8 container mt-5">
-      <h1>Walkers Near Me</h1>
-
+      <h1>Recent Walks</h1>
+      <h5>Date-       Dog-      Duration</h5>
       <ul class="list-group mt-4">
-        @foreach (Walker walker in Model.Walkers) {
+        @foreach (Walks walk in Model.Walks) {
         <li class="list-group-item disabled" aria-disabled="true">
-          <img src="@walker.ImageUrl" style="width:50px" />
-          <span class="font-weight-bold ml-4">@walker.Name</span>
+          @walk.Date ||  @walk.Dog.Name ||  @walk.Duration
         </li>
         }
       </ul>
     </section>
+    <section class="col-lg-4 col-md-8 container mt-5">
+        <h3>Total Walk Time: </h3>
+        <h4>@Model.TotalWalkTime minutes</h4>
+    </section>
   </div>
-</div>
 <div>
     @Html.ActionLink("Edit", "Edit", new {  id = Model.Walker.Id }) |
     <a asp-action="Index">Back to List</a>
